# Armour

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
ai-engine/api/: __init__.py
ai-engine/conversation/: generator.py  memory.py
ai-engine/personality/: compatibility.py  evolution.py  models.py
frontend/: package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/agents/[id]/: page.tsx
frontend/app/agents/create/: page.tsx
frontend/app/relationships/[id]/: page.tsx
frontend/components/: community-section.tsx  compatibility-leaderboard.tsx  connect-wallet-button.tsx  featured-agents.tsx  footer.tsx  header.tsx  hero-section.tsx  logo.tsx  match-button.tsx  search.tsx  stats.tsx  token-banner.tsx  trending-relationships.tsx
frontend/components/ui/: slider.tsx  use-toast.tsx
frontend/lib/: api.ts  ipfs.ts  solana.ts  types.ts
solana-programs/agent-registry/: Cargo.toml
solana-programs/agent-registry/src/: lib.rs
solana-programs/influence/: Cargo.toml
solana-programs/influence/src/: lib.rs
solana-programs/relationship/: Cargo.toml
solana-programs/relationship/src/: lib.rs
